--- a/BeautyStudio/BeautyStudio.csproj
+++ b/BeautyStudio/BeautyStudio.csproj
@@ -101,12 +101,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="test.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="test.Designer.cs">
-      <DependentUpon>test.cs</DependentUpon>
-    </Compile>
     <Compile Include="Visiting.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -153,9 +147,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="test.resx">
-      <DependentUpon>test.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Visiting.resx">
       <DependentUpon>Visiting.cs</DependentUpon>
     </EmbeddedResource>
@@ -183,6 +174,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\BeautyStudio.bacpac" />
     <None Include="Resources\Шаблон.docx" />
   </ItemGroup>
   <ItemGroup>
